// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/weeklySchedules POST / create a weekly schedule 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "2bd862e8-67ce-4328-8b2a-7df838ddbeea": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "id": "2bd862e8-67ce-4328-8b2a-7df838ddbeea",
        "monday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "saturday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "sunday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "thursday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "tuesday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "wednesday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
      },
    },
  },
  "result": "2bd862e8-67ce-4328-8b2a-7df838ddbeea",
}
`;

exports[`/api/weeklySchedules PUT /:weeklyScheduleId update a weekly schedule 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "8ce3ba61-60cd-40c6-bc85-c018cabd4a40": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "id": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
        "isAdvanced": false,
        "monday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "saturday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "sunday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "thursday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "tuesday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "wednesday": Object {
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
      },
    },
  },
  "result": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
}
`;
